For-real deployment variables

--- a/electron/main/package.json
+++ b/electron/main/package.json
@@ -5,6 +5,7 @@
   "main": "electronmain.js",
   "author": "zerotrickpony",
   "license": "Apache Creative Commons 2.0",
+  "updatehost": "https://www.zerotrickpony.com/helloelectron/dist",
   "scripts": {
     "browsertests": "electron ./electrontest.js",
     "systemtests": "electron ./gentestmain.js"
