Added staging logic to builder

--- a/electron/main/package.json
+++ b/electron/main/package.json
@@ -6,6 +6,7 @@
   "author": "zerotrickpony",
   "license": "Apache Creative Commons 2.0",
   "updatehost": "https://www.zerotrickpony.com/helloelectron/dist",
+  "previousversion": "0.0.0",
   "scripts": {
     "browsertests": "electron ./electrontest.js",
     "systemtests": "electron ./gentestmain.js"
