Rough in the self updater

--- a/electron/main/package.json
+++ b/electron/main/package.json
@@ -26,6 +26,8 @@
     "@electron-forge/maker-zip": "6.0.3",
     "@types/better-sqlite3": "7.6.9",
     "@types/source-map-support": "0.5.10",
+    "@types/electron-squirrel-startup": "1.0.0",
+    "@types/node-fetch": "2.6.7",
     "electron": "20.3.5",
     "png-to-ico": "2.1.8",
     "sass": "1.74.1",
