Added code coverage

--- a/electron/main/package.json
+++ b/electron/main/package.json
@@ -24,6 +24,7 @@
     "@electron-forge/maker-squirrel": "6.0.3",
     "@electron-forge/maker-zip": "6.0.3",
     "@eslint/js": "9.20.0",
+    "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/better-sqlite3": "7.6.9",
     "@types/electron-squirrel-startup": "1.0.0",
     "@types/node-fetch": "2.6.7",
@@ -31,6 +32,7 @@
     "electron": "20.3.5",
     "eslint": "8.56.0",
     "globals": "15.15.0",
+    "nyc": "17.1.0",
     "png-to-ico": "2.1.8",
     "sass": "1.74.1",
     "typescript": "5.3.3",
