--- a/electron/web/package.json
+++ b/electron/web/package.json
@@ -5,8 +5,10 @@
   "author": "zerotrickpony",
   "license": "Apache Creative Commons 2.0",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/jquery": "3.5.29",
     "dpdm": "3.14.0",
+    "nyc": "17.1.0",
     "typescript": "5.3.3"
   }
 }
